Minor corrections to the codes line 162-165 of 1_Code_project_qmd Last test on the rendeering Amendment of the gitignore Minor modification in the text (line 278) Minor modification in the codes line 58 and 68

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,8 @@
 .RData
 .Ruserdata
 Ficdep19.csv
-Parallel_code_Insee.html
-Parallel_code_Insee.md
-Parallel_code_Insee_files
-Code_project.html
-Code_project_files
-exploitation_données_par_département.xlsx
+1_Code_project.html
+1_Code_project_files
+2_Parallel_code_Insee.html
+2_Parallel_code_Insee.md
+2_Parallel_code_Insee_files
