--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Ficdep19.csv
 2_Parallel_code_Insee.html
 2_Parallel_code_Insee.md
 2_Parallel_code_Insee_files
+F_Att_graph1.html
+F_Att_graph2.html
