Addition of the graphics for "Act 2" and "Act 3"

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ Ficdep19.csv
 2_Parallel_code_Insee_files
 F_Att_graph1.html
 F_Att_graph2.html
+F_Att_graph3.html
+F_Att_graph4.html
+F_Att_graph5.html
+F_Att_graph6.html
