Final creation of the Map-GIF on attendance Addition of shapefile data Gitignore : qmd with code in test and unecessary output for the reader

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ F_Att_graph5.html
 F_Att_graph6.html
 Code_project_files
 Code_project.html
+gadm36_FRA_2_sp.rds
+Test_and_code_not_working.qmd
+Dep_shp_anim2.gif
+Dep_shp_anim.gif
